tests/testcases/errors/BCE0022-5.boo
"""
BCE0022-5.boo(5,5): BCE0022: Cannot convert 'System.Int32' to 'System.String'.
"""
i = 0
s = cast(string, i)
